--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,11 +103,89 @@ section {
 }
 
 .hero-banner {
-    width: 70vw;
+    min-width: 80vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 100px;
+    margin-left: 8vw;
 }
+
+
+.about {
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    border: 1px solid var(--white);
+}
+
+.about-title {
+    width: fit-content;
+    margin: 10vw auto 10px;
+}
+
+.about-text {
+    width: 50vw;
+    text-align: center;
+    margin: auto; 
+}
+
+.about-action {
+    display: block;
+    width: fit-content;
+    margin: 0px auto;
+    font-weight: 700;
+    transform: translateY(-3vw);
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    margin: 2vw 0px;
+}
+
+.card {
+    width: 20vw;
+    margin: 0px 3vw;
+}
+
+.card:nth-child(odd) {
+    margin-top: 4vw;
+}
+
+.card-img {
+    width: 100%;
+    min-height: 20vh;
+    background-color: var(--blue);
+    border-top-left-radius: 40px;
+    border-top-right-radius: 40px;
+}
+
+.card-desc {
+    background-color: var(--beige);
+    padding: 30px 20px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+}
+
+
+.card-title {
+    font-size: clamp(.8vw, 2vw, 3vw);
+}
+
+.card-text {
+    font-size: clamp(.8vw, 1vw, 1.2vw);
+    margin: 1vw 0px;
+}
+
+.card-action {
+    padding: 0px;
+    background-color: transparent;
+    color: var(--yellow);
+    font-weight: 700;
+}
+
+/* SVGS */
 
 #Tracé_906 {
     transform: matrix(0.998, -0.07, 0.07, 0.998, 958.734, 400.939);
@@ -143,6 +221,9 @@ section {
     transform: matrix(1, -0.017, 0.017, 1, 56.977, 410.077);
     animation: arriveDown 1s 1.8s both;
 }
+
+/* ANIMATION */
+
 
 @keyframes arriveUp {
     from {
@@ -221,77 +302,4 @@ section {
         transform: matrix(0.998, 0.07, -0.07, 0.9, 951.268, 741.869);
     }
 
-}
-
-.about {
-    width: 100%;
-    height: 100%;
-    background-color: var(--white);
-    border: 1px solid var(--white);
-}
-
-.about-title {
-    width: fit-content;
-    margin: 10vw auto 10px;
-}
-
-.about-text {
-    width: 50vw;
-    text-align: center;
-    margin: auto; 
-}
-
-.about-action {
-    display: block;
-    width: fit-content;
-    margin: 0px auto;
-    font-weight: 700;
-    transform: translateY(-3vw);
-}
-
-.cards {
-    display: flex;
-    justify-content: center;
-    margin: 2vw 0px;
-}
-
-.card {
-    width: 20vw;
-    margin: 0px 3vw;
-}
-
-.card:nth-child(odd) {
-    margin-top: 4vw;
-}
-
-.card-img {
-    width: 100%;
-    min-height: 20vh;
-    background-color: var(--blue);
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-}
-
-.card-desc {
-    background-color: var(--beige);
-    padding: 30px 20px;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-}
-
-
-.card-title {
-    font-size: clamp(.8vw, 2vw, 3vw);
-}
-
-.card-text {
-    font-size: clamp(.8vw, 1vw, 1.2vw);
-    margin: 1vw 0px;
-}
-
-.card-action {
-    padding: 0px;
-    background-color: transparent;
-    color: var(--yellow);
-    font-weight: 700;
 }
