--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ main {
 }
 
 section {
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
     position: sticky;
     top: 0;
     z-index: -1;
@@ -291,6 +291,7 @@ section {
     height: 100vh;
     background-color: var(--white);
     border: 1px solid var(--white);
+    position: relative;
 }
 
 .testimonies-title {
@@ -314,11 +315,212 @@ section {
 }
 
 .slider {
-    width: 70%;
-    margin: 50px auto;
+    width: 80%;
+    margin: 3.5vh auto 10px;
     overflow: hidden;
-    mask-image: linear-gradient(
-        to right,
-        transparent,
-        var(--green) 10% 90%,
     
+}
+
+.slider .list {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 45vh;
+    min-width: calc(300px * var(--items));
+    position: relative;
+}
+
+.slider .testimonie {
+    width: var(--width);
+    position: absolute;
+    left: 100%;
+    animation: autorun 30s linear infinite;
+    animation-delay: calc( (30s / var(--items)) * (var(--position) - 1) - 30s);
+}
+
+.client {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.client-name {
+    font-size: 1rem;
+}
+
+.client-username {
+    font-size: .9rem;
+}
+
+.client-profile {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 50%;
+    background-color: var(--blue);
+    margin-right: 10px;
+}
+
+.testimonie-info-title {
+    font-size: 1.2rem;
+}
+
+.testimonie-info-text {
+    font-size: 1rem;
+}
+
+.pills.slider {
+    margin: 0px auto;
+    width: 80%;
+    overflow: hidden;
+    position: relative;
+    height: 75px;
+
+}
+
+.pill {
+    width: var(--taille);
+    height: 7vh;
+    border-radius: 50px;
+    background-color: var(--blue);
+    margin: 0px 5px;
+
+    position: absolute;
+    right: 100%;
+    animation: autorun2 60s linear infinite;
+    animation-delay: calc( (60s / var(--count)) * (var(--index) - 1) - 60s);
+}
+/* SVGS */
+
+#Tracé_906 {
+    transform: matrix(0.998, -0.07, 0.07, 0.998, 958.734, 400.939);
+    animation: expandUp 1s both;
+}
+
+#Tracé_907 {
+    animation : fadeIn 1s .3s both;
+    transform: translate(3px, 620px);
+}
+
+#Tracé_908 {
+    transform : matrix(0.998, 0.07, -0.07, 0.998, 951.268, 741.869);
+    animation: expandDown 1s .8s both;
+}
+
+#eclair-icon {
+    transform : translate(1315px, 216px);
+    animation: scale 1s 1.2s both;
+}
+
+#Camada_3 {
+    transform : matrix(0.875, -0.485, 0.485, 0.875, 158.82, 238.594);
+    animation: arriveUp 1s 1.4s both;
+}
+
+#Groupe_750 {
+    transform : translateY(200px);
+    animation: fadeUp 1s 1.6s both;
+}
+
+#Objects {
+    transform: matrix(1, -0.017, 0.017, 1, 56.977, 410.077);
+    animation: arriveDown 1s 1.8s both;
+}
+
+/* ANIMATION */
+
+
+@keyframes arriveUp {
+    from {
+        opacity: 0;
+        transform : matrix(0.875, -0.485, 0.485, 0.875, 158.82, 238.594);
+    } to {
+        opacity: 1;
+        transform : matrix(0.875, -0.485, 0.485, 0.875, 258.82, 338.594);
+    }
+}
+
+@keyframes arriveDown {
+    from {
+        opacity: 0;
+        transform : matrix(1, -0.017, 0.017, 1, 6.977, 610.077)
+    } to {
+        opacity: 1;
+        transform : matrix(1, -0.017, 0.017, 1, 56.977, 410.077)
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translate(3, 620px);
+    }
+    to {
+        opacity: 1;
+        transform: translate(954px, 620px);
+    }
+}
+
+@keyframes fadeUp {
+    from {
+        opacity: 0;
+        transform: translateY(200px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes scale {
+    from {
+        opacity: 0;
+        transform: translate(1315px, 216px) scale(.9);
+    }
+    to {
+        opacity: 1;
+        transform: translate(1315px, 216px) scale(1);
+    }
+}
+
+@keyframes expandUp {
+
+    from {
+        opacity: 0;
+        transform: matrix(0.998, -0.07, 0.07, 0.2, 958.734, 400.939);
+    }
+    to {
+        opacity: 1;
+        transform: matrix(0.998, -0.07, 0.07, 1, 958.734, 400.939);
+    }
+
+}
+
+@keyframes expandDown {
+
+    from {
+        opacity: 0;
+        transform: matrix(0.998, 0.07, -0.07, 0.1, 951.268, 741.869);
+    }
+    to {
+        opacity: 1;
+        transform: matrix(0.998, 0.07, -0.07, 0.9, 951.268, 741.869);
+    }
+
+}
+
+@keyframes autorun {
+    from {
+        left: 100%;
+    }
+    to {
+        left: calc(var(--width) * -1);
+    }
+}
+@keyframes autorun2 {
+    from {
+        right: 100%;
+    }
+    to {
+        right: calc(var(--taille) * -1);
+    }
+}
