--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,24 +3,149 @@ body {
     overflow-x: hidden;
 }
 
+#about-me {
+    position: relative;
+    height: 145vh;
+}
+
 .about-me {
     display: flex;
     width: 100%;
+    height: 100vh;
+    position: relative;
 }
 
+.about-me_image, .about-me_content {
+    width: 50%;
+    height: 100%;
+}
 
-.left img {
-    max-width: 50vw;
+.about-me_image img {
+    position: absolute;
+    left: 2vw;
+    top: -10vh;
+    max-width: 60vw;
     filter: opacity(0.7);
     mix-blend-mode: luminosity; /* Similaire à background-blend-mode */
     background-color: var(--blue);
     transform: translate(20px, 80px);
+    z-index: -1;
 }
 
-.right img {
-    max-width: 50vw;
+.about-me_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10vh 10vw 0 0;
+}
+
+.about-me_desc {
+    position: relative;
+}
+
+.about-me_title {
+    text-align: right;
+    margin-bottom: 2vh;
+}
+
+.about-me_text {
+    color: var(--white);
+    text-align: right;
+    font-size: clamp(1rem, 1.7vw, 2.5rem);
+    margin-bottom: 2rem;
+}
+
+.about-me_action {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+}
+
+
+.about-me_content img {
+    position: absolute;
+    right: -1vw;
+    top: 0;
+    max-width: 60vw;
     filter: opacity(0.7);
     mix-blend-mode: luminosity; /* Similaire à background-blend-mode */
     background-color: var(--blue);
     transform: translate(8vw, 15vh);
+    z-index: -1;
+}
+
+.join-me {
+    position: absolute;
+    width: 100%;
+    height: 45vh;
+    bottom: 6vh;
+    left: 1.5vw;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    background: linear-gradient(#10007100 , #0f0071 95%);
+    z-index: 2;
+}
+
+.action-social {
+    color: var(--white);
+    font-size: clamp(.8vw, 2.5vw, 3.5vw);
+    display: flex;
+    align-items: center;
+    margin-right: 7vw;
+
+}
+
+.action-social img {
+    margin-left: 10px;
+}
+
+/* COMPÉTENCE */
+
+.competence {
+    height: 100vh;
+    padding: 0 10vw;
+}
+
+@media (max-width: 1280px) {
+    *{
+        overflow: hiddden;
+    } 
+
+    .about-me_content img {
+        top: -25px;
+        max-width: 50vw;
+        right: 10vw;
+    }
+
+    .join-me {
+        left: 0vw;
+        height: 45vh;
+        bottom: 20vh;
+    }
+}
+
+
+@media (min-width: 1440px) { 
+    .about-me_content img {
+        top: -62px;
+    }
+
+    .join-me {
+        height: 65vh;
+        bottom: 4vh;
+    }
+}
+
+@media (min-width: 1920px) { 
+    .about-me_content img {
+        min-width: 60vw;
+        top: -62px;
+    }
+
+    .join-me {
+        height: 45vh;
+        bottom: 14vh;
+    }
 }
