--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -118,6 +118,7 @@ body {
 
 .competences_title {
     margin-left: 5vw;
+    margin-top: 10vw;
 }
 
 .competence {
@@ -185,12 +186,13 @@ body {
 
 /* FORMATION */
 
-.formations {
+.formation {
     height: 100vh;
     padding: 0 10vw;
+    position: relative;
 }
 
-.formations_text {
+.formation-text {
     color: var(--white);
     margin-top: 3vh;
     margin-left: 5vw;
@@ -198,8 +200,57 @@ body {
     font-size: clamp(1rem, 2vw, 2.5rem);
 }
 
-.formations_title {
+.formation-title {
     margin-left: 5vw;
+    margin-top: 10vw;
+}
+.card-wrapper {
+    margin-top: 10vh;
+    display: flex;
+    gap: 60px;
+}
+
+.formation-card {
+    width: 15vw;
+    height: 35vh;
+}
+
+.card-header {
+    background-color: var(--beige);
+    height: 75%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.card-footer {
+    background-color: var(--blue);
+    height: 25%;
+    box-shadow: 0px 1px 5px 1px #1111118e;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* .card-footer:hover {
+    background-color: var(--blue);
+    height: 25%;
+    box-shadow: inset 0px 2px 2px 4px #1111118e;
+    padding: 25px 0px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+} */
+
+.card-footer-title {
+    color: var(--yellow);
+    font-size: clamp(.8rem, 1.3vw, 2.5rem);
+}
+
+.formation-action {
+    display: block;
+    width: fit-content;
+    margin: 5vw auto;
 }
 
 
